# adbuino

./: .gitignore  .gitmodules  LICENSE  QuokkADB.md  README.md  platformio.ini  profiles.json
.github/workflows/: .adbuino_build.yml  adbuino_build.yml  adbuino_v1_build.yml  adbuino_v2_build.yml  quokkadb_build.yml
MemuPatcher/: UnlimitedMemuWorks.sln
MemuPatcher/UnlimitedMemuWorks/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  Form1.Designer.cs  Form1.cs  Form1.resx  ProcessMemoryScanner.cs  Program.cs  UnlimitedMemuWorks.csproj
MemuPatcher/UnlimitedMemuWorks/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
adbduino/: adbduino_circuitboard.osm
adbduino/sketch/: adbuino.ino  ps2kbd.h
boards/: QuokkADB_RP2040.json  USB2ADB_RP2040.json
case/: adbuino_case2.FCStd  adbuino_case2.FCStd1
doc/: adb.md  wacom.md
dongweb/: Thumbs.db  readme.txt
hw/adbuino_pogo_holder/: adbuino_case.FCStd  adbuino_case.FCStd1  adbuino_case.stl  adbuino_pogo_holder.FCStd  adbuino_pogo_holder.FCStd1  adbuino_pogo_holder.stl
hw/adbuino_v0p1/: adbuino-cache.lib  adbuino.kicad_pcb  adbuino.pro  adbuino.sch  fp-lib-table  sym-lib-table
hw/adbuino_v0p9/: ARDUINO_PRO_MINI.lib  LevelShifter.sch  MAX3421EEHJ+.epw  MAX3421EEHJ+.stl  MAX3421EEHJ+.stp  MAX3421EEHJ+.wrl  MD2-40ST.lib  SamacSys_Parts.dcm  SamacSys_Parts.lib  adbuino-cache.lib  adbuino.kicad_pcb  adbuino.pro  adbuino.sch  fp-lib-table
hw/adbuino_v0p9p1/: LevelShifter.sch  SamacSys_Parts.dcm  SamacSys_Parts.lib  TE_5749180-1.kicad_mod  adbuino-cache.lib  adbuino.kicad_pcb  adbuino.sch
hw/adbuino_v1p0/: 5749180-1.lib  CUI_MD2-40ST.kicad_mod  LevelShifter.sch  MD2-40ST-SMT.FCStd  adbuino-cache.lib  adbuino.kicad_pcb  adbuino.sch  fp-lib-table
hw/adbuino_v1p0_pogo_holder/: CUI_MD2-40ST-SMT.kicad_mod  LevelShifter.sch  SamacSys_Parts.dcm  SamacSys_Parts.lib  adbuino-cache.lib  adbuino.kicad_pcb  adbuino.sch  sym-lib-table
hw/adbuino_v1p1/: LevelShifter.sch  MD2-40ST-SMT.wrl  MODULE_ARDUINO_PRO_MINI.kicad_mod  adbuino-cache.lib  adbuino.kicad_pcb  adbuino.pro  adbuino.sch
hw/adbuino_v2p0/: .gitignore  CUI_MD2-40ST-SMT.kicad_mod  LevelShifter.kicad_sch  MD2-40ST-SMT.lib  adbuino.kicad_pcb  adbuino.kicad_pro  adbuino.kicad_sch  fp-lib-table  sym-lib-table
illuminateisti/: Thumbs.db  index.html  main.js  readme.txt
include/: adb.h  adbregisters.h  tusb_config.h  usb2adb_gpio.h  usb_hid_keys.h  usbkbdparser.h  usbmouseparser.h
indexshit/: readme.txt
jsonip/: index.pl
lcl-hack/: Thumbs.db  index.html  lcl.js  readme.txt
lcl-v2/: README.md  lclscraper.js  package.json
lib/Simple-Circular-Queue/: library.json
rutorrent_flatui/: readme.txt  stable.css  style.css
science/: Thumbs.db  index.html
smartwatch-workaround/: readme.txt  smartwatch_notificationworkaround.js
src/: adb.cpp  main.cpp  usb2adb_gpio.cpp  usbhost.cpp  usbkbdparser.cpp  usbmouseparser.cpp  usbtoadb.cpp
src/adbmonitor/: CMakeLists.txt  adb.h  adbmonitor.cpp
src/adbpico/: CMakeLists.txt  adb.cpp  adb.h  adbpico.cpp  hid_app.c  msc_app.c  platformio.ini  tusb_config.h
src/adbuino/: .gitignore  platformio.ini
src/firmware/: .gitignore  CMakeLists.txt  platformio.ini
src/firmware/QuokkADB-supplementary-files/: 991-local.rules  README.md  launch.json
src/firmware/boards/: QuokkADB_RP2040.json  pico.h  quokkadb.h  rhc_quokkadb_div4.json
src/firmware/include/: quokkadb_tusb_config.h  tusb_config.h
src/firmware/include/pico/: config_autogen.h
src/firmware/lib/QuokkADB/include/: adb_platform.h  blink.h  char2usbkeycode.h  flashsettings.h  hidinputclasses.h  keyboardrptparser.h  log_cache.h  mouserptparser.h  platform_config.h  platform_logmsg.h  platformkbdparser.h  platformmouseparser.h  quokkadb_config.h  quokkadb_gpio.h
src/firmware/lib/QuokkADB/src/: CMakeLists.txt  adb_platform.cpp  blink.cpp  char2usbkeycode.cpp  flashsettings.cpp  keyboardrptparser.cpp  log_cache.cpp  mouserptparser.cpp  platform_logmsg.cpp  platformkbdparser.cpp  platformmouseparser.cpp  quokkadb.cpp  quokkadb_gpio.cpp  rp2040_serial.cpp  run_from_sram.ld  usbhost.cpp
src/firmware/lib/adb/include/: adb.h  adb_platform.h  adbkbdparser.h  adbmouseparser.h  adbregisters.h
src/firmware/lib/adb/src/: CMakeLists.txt  adb.cpp  adbkbdparser.cpp  adbkdbparser.cpp  adbmouseparser.cpp  usbtoadb.cpp
src/firmware/lib/adb_rp2040/include/: keyboardrptparser.h
src/firmware/lib/adb_rp2040/src/: CMakeLists.txt  adb_platform.cpp  keyboardrptparser.cpp  rp2040_gpio.cpp  rp2040_serial.cpp  usbhost.cpp
src/firmware/lib/adbuino/include/: adb_platform.h  platform_config.h  platform_logmsg.h  platformkbdparser.h  platformmouseparser.h  ps2kbd.h  usbinterface.h
src/firmware/lib/adbuino/src/: adb_platform.cpp  adbuino.cpp  platform_logmsg.cpp  platformkbdparser.cpp  platformmouseparser.cpp  ps2kbd.cpp  usb_description.cpp  usbinterface.cpp
src/firmware/lib/adbuino2/include/: adbuino_v2.h  adbuino_v2_config.h
src/firmware/lib/adbuino2/src/: CMakeLists.txt  adbuino_v2.cpp
src/firmware/lib/ps2/src/: ps2kbd.cpp
src/firmware/lib/usb/include/: char2usbkeycode.h  scqueue.h  scqueue.tpp  usbkbdparser.h  usbmouseparser.h
src/firmware/lib/usb/src/: CMakeLists.txt  char2usbkeycode.cpp  usbkbdparser.cpp  usbmouseparser.cpp
src/firmware/src/: CMakeLists.txt  main.cpp
src/firmware/utils/: rename_adbuino_binaries.sh  rename_quokkadb_binaries.sh  version-extractor.cpp
src/hello/: .gitignore  CMakeLists.txt  adb.pio  adb_receive.pio  adb_write.pio  hello_serial.c  pulse.pio
src/keyboard_test/: platformio.ini
src/uhs2_debug/: platformio.ini
telegram-wiartbot/: readme.txt  wiartcore.pl
tvc-16/: README.txt  index.html  tvc-16.yml
tvc-16/css/: style.css
tvc-16/js/: index.js
upload/: LICENSE  README.md  css.css  index.php
uptime/: index.pl  readme.txt
uptime/css/: 80s.css  Nouveau_IBM.eot  Nouveau_IBM_Stretch.eot
wab/: Thumbs.db  science.html  style.css  style.scss
webcam/: history.pl  index.html  msg.pl  msg_on_speaker_server.pl  readme.txt  view.html  viewserver.js
webpage-index/: index.html  readme.txt
(+151 files in other folders)
